--- a/ve-ban-lanh-dao.html
+++ b/ve-ban-lanh-dao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bạn có biết: Vì sao mình bị béo bụng và cách khắc phục hiệu quả? - Ngũ Hành Group</title>
+    <title>Về ban lãnh đạo - Ngũ Hành Group</title>
     <link rel="icon" href="statics/img/favicion.png" sizes="32x32">
     <link href="statics/css/style.css" rel="stylesheet" />
     <script src="statics/js/jquery.min.js?v=2.2.1" type="text/javascript"></script>
@@ -219,7 +219,136 @@
             </div>
         </div>
     </header>
-   
+    <section class="leadership_page">
+        <div class="bg-fill" style="background-image: url(statics/img/NH_102-scaled.jpg);"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6 col-sm-12 col-lg-6">
+                    <div class="info_about_desc">
+                        <h2>BAN LÃNH ĐẠO</h2>
+                        <h3>TẬP ĐOÀN NGŨ HÀNH</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="leadership_info">
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-sm-6">
+                <div class="leadership_info_img">
+                    <img src="statics/img/trần-thu-hằng-01-scaled.jpg" width="2156" height="2560" class="img-fluid" alt="" />
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-sm-6">
+                <div class="leadership_info_content">
+                    <div class="text_title_head">
+                        <h1>Ban lãnh đạo</h1>
+                        <img src="statics/img/border-bottom.png" alt="" width="178" height="5">
+                    </div>
+                   <h2 class="title">20 năm</h2>
+                   <h2 class="subtitle">Kinh Nghiệm </h2>
+                   <p>Hướng tới việc đào tạo nguồn nhân lực chuyên nghiệp, vừa có tâm vừa có tầm phụng sự cộng đồng, nâng tầm sản phẩm dịch vụ thương hiệu Việt xứng tầm quốc tế, hoàn thiện hệ thống quy trình, bộ máy nhân sự bài bản, chuyên nghiệp. Chúng tôi cam kết đem lại những giá trị tốt nhất và bền vững nhất cho quý khách hàng.</p>
+                   <div class="row">
+                        <div class="col-xl-4 col-lg-4 col-sm-12">
+                            <div class="leadership_item">
+                                <div class="img">
+                                    <img src="statics/img/love.png" width="2133" height="2133" class="img-fluid" alt="" />
+                                </div>
+                                <div class="text">
+                                    <h4>Đạo Đức</h4>
+                                    <p>Hành xử chính trực đúng đạo lý, lấy danh dự và uy tín làm đầu, nhất quán trong lời nói và hành vi của mình.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-sm-12">
+                            <div class="leadership_item">
+                                <div class="img">
+                                    <img src="statics/img/partnership-handshake.png" width="2133" height="2133" class="img-fluid" alt="" />
+                                </div>
+                                <div class="text">
+                                    <h4>Trách nhiệm</h4>
+                                    <p>Thực hiện đúng cam kết, luôn tìm giải pháp và hành động chuẩn mực ngay từ những việc nhỏ nhất. Chủ động chịu mọi hậu quả, không đổ lỗi, không giải thích.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-sm-12">
+                            <div class="leadership_item">
+                                <div class="img">
+                                    <img src="statics/img/graphic.png" width="2133" height="2133" class="img-fluid" alt="" />
+                                </div>
+                                <div class="text">
+                                    <h4>Tiên Phong</h4>
+                                    <p>Chủ động dẫn đầu, luôn tập trung nghiên cứu, sáng tạo và cải tiến nhằm tạo ra sự khác biệt vượt trội và độc đáo. Không ngừng học hỏi, không ngại thay đổi, sẵn sàng vượt qua thử thách, chấp nhận rủi ro, vươn lên để khẳng định giá trị của bản thân và đưa tổ chức vươn xa.</p>
+                                </div>
+                            </div>
+                        </div>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="leadership_list">
+        <div class="container">
+            <div class="row">
+                <div class="col col-xl-2 col-lg-4 col-sm-4 col-6">
+                    <div class="leadership_list_item">
+                        <div class="img">
+                            <img src="statics/img/wweb-ok.jpg" width="900" height="900" alt="" class="img-fluid" />
+                        </div>
+                        <div class="text">
+                            <h4>Mrs. Trần Thu Hằng</h4>
+                            <p>CTHĐQT Ngũ Hành</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-2 col-lg-4 col-sm-4 col-6">
+                    <div class="leadership_list_item">
+                        <div class="img">
+                            <img src="statics/img/wweb-ok.-1.jpg" width="900" height="900" alt="" class="img-fluid" />
+                        </div>
+                        <div class="text">
+                            <h4>Mr. Tiêu Trí Dũng</h4>
+                            <p>Giám Đốc Điều Hành</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-2 col-lg-4 col-sm-4 col-6">
+                    <div class="leadership_list_item">
+                        <div class="img">
+                            <img src="statics/img/wweb-x.png" width="900" height="900" alt="" class="img-fluid" />
+                        </div>
+                        <div class="text">
+                            <h4>Mrs. Nguyễn Thu Lan</h4>
+                            <p>Giám Đốc Vận Hành</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-2 col-lg-4 col-sm-4 col-6">
+                    <div class="leadership_list_item">
+                        <div class="img">
+                            <img src="statics/img/IMG_3373-ok.jpg" width="900" height="900" alt="" class="img-fluid" />
+                        </div>
+                        <div class="text">
+                            <h4>Ms. Vũ Tư Nhiệm</h4>
+                            <p>Giám Đốc Đào Tạo</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-2 col-lg-4 col-sm-4 col-6">
+                    <div class="leadership_list_item">
+                        <div class="img">
+                            <img src="statics/img/SSSx.png" width="900" height="900" alt="" class="img-fluid" />
+                        </div>
+                        <div class="text">
+                            <h4>Mrs. </h4>
+                            <p>Giám Đốc Kinh Doanh</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <footer class="footer" style="background-image: url(statics/img/bg-footer.jpg);">
         <div class="container">
             <div class="row">
