--- a/ve-ngu-hanh-group.html
+++ b/ve-ngu-hanh-group.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bạn có biết: Vì sao mình bị béo bụng và cách khắc phục hiệu quả? - Ngũ Hành Group</title>
+    <title>Về Ngũ Hành Group - Ngũ Hành Group</title>
     <link rel="icon" href="statics/img/favicion.png" sizes="32x32">
     <link href="statics/css/style.css" rel="stylesheet" />
     <script src="statics/js/jquery.min.js?v=2.2.1" type="text/javascript"></script>
@@ -219,7 +219,243 @@
             </div>
         </div>
     </header>
-   
+    <section class="infrastructure_bg">
+        <div class="bg-fill" style="background-image: url(statics/img/647d4b1acaf328ad71e2-scaled.jpg);"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6 col-sm-12 col-lg-6">
+                    <div class="info_about_desc">
+                        <h2>NGŨ HÀNH GROUP</h2>
+                        <h3>Nâng tầm dịch vụ – Phụng sự người Việt</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="five_elements_page">
+        <div class="container">
+            <div class="title_bg_main">
+                <img src="statics/img/logo-title.png" alt="" width="74" height="74">
+                <h1>NGŨ HÀNH GROUP</h2>
+                <img src="statics/img/border-bottom.png" alt="" width="212" height="6">
+            </div>
+            <div class="text">
+                <p>Tiền thân của Ngũ Hành Group là “Ngũ Hành Dưỡng Sinh Viện – Trung tâm chăm sóc sức khoẻ và làm đẹp dưỡng sinh hàng đầu trong ngành. Đồng thời cũng là đơn vị đầu tiên đưa làm đẹp dưỡng sinh ghi vào sử sách ngành làm đẹp Việt Nam.</p>
+                <p>Tính đến thời điểm hiện tại, chúng tôi đã sở hữu và cho ra đời 4 công nghệ độc quyền:</p>
+                <ul>
+                    <li>Công nghệ Ngũ Hành Dưỡng Sinh SKT – Chăm sóc sức khỏe chuyên sâu.</li>
+                    <li>Công nghệ Điêu Khắc Body – Điều chỉnh phom dáng theo ý muốn.</li>
+                    <li>Công nghệ Giảm Cân Ngũ Hành – Cân bằng thể trọng theo chiều cao.</li>
+                    <li>Công nghệ SKB-18 – Se khít cô bé bằng tay như tuổi 18.</li>
+                </ul>
+                <p>Hướng tới việc đào tạo nguồn nhân lực chuyên nghiệp, vừa có tâm vừa có tầm phụng sự cộng đồng, nâng tầm sản phẩm dịch vụ thương hiệu Việt xứng tầm quốc tế, hoàn thiện hệ thống quy trình, bộ máy nhân sự bài bản, chuyên nghiệp. Chúng tôi cam kết đem lại những giá trị tốt nhất và bền vững nhất cho quý khách hàng.</p>
+                <p>Ngũ Hành Group không ngừng phấn đấu mang đến cộng đồng những sản phẩm, dịch vụ đẳng cấp. Một cuộc sống sung túc, hạnh phúc cho nhân sự. Những lợi ích không ngừng gia tăng cho đối tác, nhà đầu tư. Tạo nên hệ sinh thái Ngũ Hành với nhiều giá trị nhân văn, khẳng định vị thế thương hiệu Việt trên trường Quốc tế!</p>
+            </div>
+        </div>
+    </section>
+    <section class="section_content">
+            <div class="tille">
+                <div class="container">
+                    <h2>TẦM NHÌN, SỨ MỆNH, GIÁ TRỊ CỐT LÕI</h2>
+                </div>
+            </div>
+            <div class="container">
+                <div class="text">
+                    <h3>Tầm nhìn</h3>
+                    <p class="title_sologan">NGŨ HÀNH GROUP ĐỊNH HƯỚNG PHÁT TRIỂN MỘT HỆ SINH THÁI VỚI NHIỀU GIÁ TRỊ NHÂN VĂN, KHẲNG ĐỊNH VỊ THẾ THƯƠNG HIỆU VIỆT TRÊN THỊ TRƯỜNG QUỐC TẾ</p>
+                    <p>Ngũ Hành Group không ngừng phấn đấu mang đến cộng đồng những sản phẩm, dịch vụ đẳng cấp, một cuộc sống sung túc, hạnh phúc cho nhân sự, những lợi ích không ngừng gia tăng cho đối tác, nhà đầu tư. Tạo nên hệ sinh thái Ngũ Hành với nhiều giá trị nhân văn, khẳng định vị thế thương hiệu Việt trên thị trường Quốc tế.</p>
+                    <p><img src="statics/img/phong-ky-thuat-dong-khach-1536x1152.jpg" width="2560" height="1707" alt="" class="img-fluid" /></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section_mission_bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-8 colg-8 col-sm-12">
+                    <div class="img">
+                        <img src="statics/img/IMG_6412-1536x1024.jpg" width="2560" height="1707" class="img-fluid" alt="" />
+                    </div>
+                </div>
+                <div class="col-xl-4 colg-4 col-sm-12">
+                    <div class="text">
+                        <h3>SỰ MỆNH</h3>
+                        <p class="title_sologan">NÂNG TẦM DỊCH VỤ – PHỤNG SỰ NGƯỜI VIỆT</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section_core_values_bg">
+        <div class="container">
+            <div class="slick-core slick-none">
+                <div class="item">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-sm-6">
+                            <div class="text">
+                                <h3>Giá trị cốt lõi</h3>
+                                <p class="title_sologan"><span>ĐẠO ĐỨC</span> – PHỤNG SỰ – GIEO HẠT – TRÁCH NHIỆM – TIÊN PHONG</p>
+                                <p><strong>Hành xử chính trực đúng đạo lý</strong></p>
+                                <p>Lấy danh dự và uy tín làm đầu, nhất quán trong lời nói và hành vi của mình. Đối diện trực tiếp mọi vấn đề, xử lý thẳng thắn trực diện, giải quyết rõ ràng minh bạch, không ích kỉ, không tư lợi, luôn trung thực với bản thân, tuyệt đối trung thành với tổ chức.</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-sm-6">
+                            <div class="img">
+                                <img src="statics/img/faf2b1a60ee9f6b7aff8-1200x800.jpg" width="1020" height="680" alt="" class="img-fluid" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-sm-6">
+                            <div class="text">
+                                <h3>Giá trị cốt lõi</h3>
+                                <p class="title_sologan">ĐẠO ĐỨC – <span>PHỤNG SỰ</span> – GIEO HẠT – TRÁCH NHIỆM – TIÊN PHONG</p>
+                                <p><strong>Sẵn sàng dấn thân</strong></p>
+                                <p>Tận tâm phục vụ khách hàng trên mức mong đợi. Cống hiến hết mình với sứ mệnh của tổ chức.</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-sm-6">
+                            <div class="img">
+                                <img src="statics/img/3-1112x800.jpg" width="1020" height="680" alt="" class="img-fluid" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="conmit_page" style="background-image: url(statics/img/bg-service.jpg);">
+        <div class="container">
+            <div class="title_bg_main">
+                <img src="statics/img/partnership-handshake-1536x1536.png" alt="" width="100" height="100">
+                <h2>CAM KẾT CỦA NGŨ HÀNH GROUP</h2>
+                <img src="statics/img/border-white.png" alt="" width="212" height="7">
+            </div>
+            <div class="conmit_content">
+                <div class="row">
+                    <div class="col-xl-3 col-sm-6 col-lg-3">
+                        <div class="box">
+                            <div class="box_content_title">ĐỐI VỚI KHÁCH HÀNG</div>
+                            <p class="text_overlay_gold">01</p>
+                            <div class="box_content_description">Mọi suy nghĩ và hành động luôn đặt khách hàng làm trọng tâm để phụng sự.</div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-sm-6 col-lg-3">
+                        <div class="box">
+                            <div class="box_content_title">ĐỐI VỚI NHÂN SỰ</div>
+                            <p class="text_overlay_gold">02</p>
+                            <div class="box_content_description">Tạo nên một môi trường làm việc thân thiện, tôn trọng và công bằng, đặt mọi thành viên trong tổ chức đều là chủ nhân của doanh nghiệp. Xây dựng và phát triển các mối quan hệ với đối tác trên cơ sở bình đẳng, tôn trọng ,hợp tác đôi bên cùng có lợi.</div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-sm-6 col-lg-3">
+                        <div class="box">
+                            <div class="box_content_title">ĐỐI VỚI NHÀ ĐẦU TƯ</div>
+                            <p class="text_overlay_gold">03</p>
+                            <div class="box_content_description">Mang đến cho nhà đầu tư giá trị doanh nghiệp không ngừng gia tăng.</div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-sm-6 col-lg-3">
+                        <div class="box">
+                            <div class="box_content_title">ĐỐI VỚI CỘNG ĐỒNG VÀ XÃ HỘI</div>
+                            <p class="text_overlay_gold">04</p>
+                            <div class="box_content_description">Tạo ra những sản phẩm dịch vụ nhân văn an toàn hiệu quả, nguồn nhân lực chuyên nghiệp, phụng sự cộng đồng xã hội.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="target_page">
+        <div class="container">
+            <div class="title_bg_main">
+                <img src="statics/img/graphic-1454x1536.png" alt="" width="100" height="100">
+                <h2>MỤC TIÊU CHIẾN LƯỢC</h2>
+                <img src="statics/img/border-bottom.png" alt="" width="212" height="6">
+            </div>
+        </div>
+        <div class="tille">
+            <div class="container">
+                <h2>Ngũ hành dưỡng sinh viện</h2>
+                <p>Hệ sinh thái làm đẹp – dưỡng sinh</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 col-sm-4 col-lg-4">
+                        <div class="item">
+                            <h2>2016-2019</h2>
+                            <p>Đóng gói sản phẩm – dịch vụ, kĩ thuật công nghệ; hoàn thiện hệ thống quy trình bộ máy nhân sự.<br>
+                                Chuyển giao công nghệ đến 500 đại lí trên toàn quốc.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-sm-4 col-lg-4">
+                        <div class="item">
+                            <h2>2020-2025</h2>
+                            <p>Nâng tầm dịch vụ ,đem đến cho khách hàng những trải nghiệm Wow tuyệt vời Phủ sóng thương hiệu tới 65 tỉnh thànhvới 1000 đại lí trên toàn quốc</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-sm-4 col-lg-4">
+                        <div class="item">
+                            <h2>2026 – 2055</h2>
+                            <p>Trở thành thương hiệu uy tín hàng đầu trong lĩnh vực làm đẹp – dưỡng sinh. Khẳng đinh vị thế thương hiệu Việt trên thị trường quốc tế</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="tille">
+            <div class="container">
+                <h2>Ngũ Hành Academy</h2>
+                <p>Của cải bề bề không bằng cái nghề trong tay</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 col-sm-4 col-lg-4">
+                        <div class="item">
+                            <h2>2020-2022</h2>
+                            <p>Đóng gói giáo trình đào tạo kĩ thuật công nghệ, quy trình đào tạo bài bản, đội ngũ giảng viên chuyên nghiệp.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-sm-4 col-lg-4">
+                        <div class="item">
+                            <h2>2023-2030</h2>
+                            <p>Trao giá trị trên 10.000 học viên được đào tạo chuyên nghiệp, bài bản<br>
+                                Cung cấp cho cộng đồng nguồn nhân lực chất lượng cao, vừa có tâm, vừa có tầm.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="tille">
+            <div class="container">
+                <h2>7Stars</h2>
+                <p>Nâng tầm sản phẩm, dịch vụ thương hiệu Việt xứng tầm quốc tế</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 col-sm-4 col-lg-4">
+                        <div class="item">
+                            <h2>2016-2019</h2>
+                            <p>Đóng gói sản phẩm – dịch vụ; hoàn thiện thống quy trình , bộ máy nhân sự.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-sm-4 col-lg-4">
+                        <div class="item">
+                            <h2>2020-2030</h2>
+                            <p>Nâng tầm dịch vụ , đem đến cho khách hàng những trải nghiệm dịch vụ đẳng cấp xứng tâm quốc tế.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="footer" style="background-image: url(statics/img/bg-footer.jpg);">
         <div class="container">
             <div class="row">
