--- a/ve-co-so-vat-chat.html
+++ b/ve-co-so-vat-chat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bạn có biết: Vì sao mình bị béo bụng và cách khắc phục hiệu quả? - Ngũ Hành Group</title>
+    <title>Về cơ sở vật chất - Ngũ Hành Group</title>
     <link rel="icon" href="statics/img/favicion.png" sizes="32x32">
     <link href="statics/css/style.css" rel="stylesheet" />
     <script src="statics/js/jquery.min.js?v=2.2.1" type="text/javascript"></script>
@@ -219,7 +219,97 @@
             </div>
         </div>
     </header>
-   
+   <section class="infrastructure_bg">
+    <div class="bg-fill" style="background-image: url(statics/img/z2049859857488_8c321be7d4644af844115e15b6571873.jpg);"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-6 col-sm-12 col-lg-6">
+                <div class="info_about_desc">
+                    <h2>CƠ SỞ VẬT CHẤT</h2>
+                    <h3>SANG TRỌNG, ĐẲNG CẤP, ĐẠT CHUẨN QUỐC TẾ</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
+    <section class="equipments">
+        <div class="container">
+            <div class="equipments_tile">
+                <h1>TRANG THIẾT BỊ HIỆN ĐẠI</h1>
+                <img src="statics/img/border-bottom.png" alt="" width="149" height="5">
+            </div>
+            <div class="row">
+                <div class="col-xl-9 col-sm-9 col-lg-9">
+                    <div class="img">
+                        <img src="statics/img/máy-skt-9-1-1067x800.jpg" alt="" width="1024" height="765" class="img-fluid" />
+                    </div>
+                </div>
+                <div class="equipments_col col-xl-6 col-sm-6 col-lg-6">
+                    <div class="row">
+                        <div class="col-xl-4 col-lg-4 col-sm-4 col-4">
+                            <div class="img">
+                                <img src="statics/img/cổ-vai-gáy-vuông-800x800.jpg" width="800" height="800" class="img-fluid" alt="" />
+                            </div>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-sm-4 col-4">
+                            <div class="img">
+                                <img src="statics/img/bụng-vuông-800x800.jpg" width="800" height="800" class="img-fluid" alt="" />
+                            </div>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-sm-4 col-4">
+                            <div class="img">
+                                <img src="statics/img/IMG_6704-vuong-800x800.jpg" width="800" height="800" class="img-fluid" alt="" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-10 col-lg-10 col-sm-12">
+                    <div class="equipments_text">
+                        <h3>Thông số kỹ thuật</h3>
+                        <p><strong>Máy SKT-9</strong></p>
+                        <p>Cấu tạo bởi 3 phần:</p>
+                        <ul>
+                        <li>Sạc: có mã số bảo hành ghi trên thân sạc</li>
+                        <li>Thân máy: có nút on/off, face, body</li>
+                        <li>Đầu máy: cấu tạo bởi phần bề mặt được mạ vàng ( Vàng là kim loại lành tính, có độ bền cao &amp; không bị oxy hóa) kết hợp với phần thân cầm làm bằng titan ( Tita là kim loại nhẹ, truyền nhiệt kém, vô hại đối với sức khỏe con người, đặc biệt là dẫn truyền sóng tốt nhất hiện nay)</li>
+                        </ul>
+                        <p>Tần số: 1s/2 triệu Hz</p>
+                        <p>Máy sử dụng sóng siêu thanh với 2 đợt sóng có thể truyền sâu từ 5 đến 7 cm giúp đả thông kinh lạc chuyên sâu, đào thải độc tố. Đồng thời hóa lỏng những mô mỡ thừa, mỡ hạt, mỡ cứng, mỡ lâu năm và đào thải ra ngoài qua hệ bài tiết.</p>
+                        <p><em><strong>Nguồn gốc</strong>: Ngũ Hành Dưỡng Sinh Viện là nhà phân phối độc quyền tại Việt Nam</em></p>
+                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="comfor_facilities">
+        <div class="container">
+            <div class="equipments_tile">
+                <h2>CƠ SỞ VẬT CHẤT TIỆN NGHI</h2>
+                <img src="statics/img/border-bottom.png" alt="" width="149" height="5">
+            </div>
+            <div class="row">
+                <div class="col-xl-8 col-lg-8 col-sm-8">
+                    <div class="img">
+                        <img src="statics/img/ae1840f0f77811264869-1280x800.jpg" width="1020" height="638" class="img-fluid" alt="" /> 
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-sm-4">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="img">
+                                <img src="statics/img/3d1080e7376fd131887e-1400x788.jpg" width="1020" height="638" class="img-fluid" alt="" /> 
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="img">
+                                <img src="statics/img/47b7c25e75d69388cac7-1280x800.jpg" width="1020" height="638" class="img-fluid" alt="" /> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="footer" style="background-image: url(statics/img/bg-footer.jpg);">
         <div class="container">
             <div class="row">
