--- a/news.html
+++ b/news.html
@@ -272,6 +272,19 @@
                                 </div>
                             </div>
                         </div>
+                        <ul class="nav-pagination text-center">
+                            <li>
+                                <span aria-current="page" class="page-number current">1</span>
+                            </li>
+                            <li>
+                                <a class="page-number" href="#">2</a>
+                            </li>
+                            <li>
+                                <a class="next page-number" href="#">
+                                    <i class="fa-regular fa-angle-right"></i>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                     <div class="col col-xl-3 col-lg-3 col-sm-12 col-12">
                         <div class="block_search">
